src/App.css
/* Importing Noto Sans JP - This font is used for the character header */
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');

/* TO DO: LOOK INTO PAIRING FONTS */

/* These style settings apply to all views */

#loginContainer {
    color: #59A4FF;
}

/* removing underline from link */
#navLogin:link {
    text-decoration: none;
}

/* removing underline from visited link */
#navLogin:visited {
    text-decoration: none;
    color: #59A4FF;
}

/* TODO: Add in neat hover effect */
#navLogin:hover {
    text-decoration: none;
}

/* Setting nav as flex */
nav {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
    align-content: space-around;
    background-color: #DADFE5;
}

/* All mobile versions of the site will have the same mobile header color */
#mobileHeader {
    background-color: #F1F6F7;
    text-align: center;
    font-family: 'Noto Sans JP', sans-serif;
}

/* Temporarily setting the body's background color to match Granblue */
body {
    background-color: #E2EDEE;
}

#questionSearch {
    outline: none;
}

#QAButtonContainer {
    display: flex;
    flex-direction: row;
}

#pageMoveContainer {
    display: flex;
    flex-direction: row;
}

#searchContainer {
    display: flex;
}

#questionTimestamp {
    font-weight: 250;
}

#questionContainer {
    display: flex;
    flex-direction: column;
}

/* CSS FOR MOBILE CHARACTER FORUM: IMPORTANT! */
#forumsectionHeader {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
#subforumButtons {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

/* TODO: Add color for selected link */

#signupLabel {
    text-align: center;
}

/* removing underline from unvisited footer link */

#registerFooter:link {
    text-decoration: none;
    color: #59A4FF;
}

/* removing underline from visited footer link */
#registerFooter:visited {
    text-decoration: none;
    color: #59A4FF;
}

/* CSS ANIMATION SETTINGS */
#navMenuMarkerHidden {
    display: none;
}
#navMenuXHidden {
    display: none;
}
#navSideMenuShow {
    display: unset;
    /* Check and see how this works on all devices! */
}
#navSideMenuHide {
    display: none;
}

/* IPhone 8 Plus Design */
@media only screen
    and (device-width : 414px)
    and (device-height : 736px)
    and (-webkit-device-pixel-ratio : 3) { 
        #navMenuMarker {
            width: 6%;
        }
        #navMainLogo {
            width: 30%;
            height: 30%;
        }
        #loginContainer {
            font-size: 90%;
        }
        #charImage {
            display: block;
            width: 50%;
            /* Centering Image */
            margin: 0 auto;
        }
        #overviewDescription {
            font-size: 90%;
            font-family: 'Noto Sans JP', sans-serif;
            margin: 9%;
            border: 2px solid #5C979C;
            padding: 3%;
        }
        /* Question Search Page CSS */
        #questionSearch {
            width: 55%;
            font-family: 'Noto Sans JP', sans-serif;
        }
        #QAButtonContainer {
            justify-content: space-around;
            margin-top: 6%;
        }
        .QAButton {
            width: 22%;
            font-family: 'Noto Sans JP', sans-serif;
            font-size: 90%;
        }
        #searchContainer {
            justify-content: space-around;
            margin-top: 6%;
        }
        #pageMoveContainer {
            justify-content: space-around;
            margin-top: 6%;
        }
        .pageMoveButtons {
            width: 25%;
            font-family: 'Noto Sans JP', sans-serif;
            font-size: 90%;
        }
        /* CSS For New Layout */
        #newDesc {
            font-size: 80%;
            /* Eventually change this to percents */
            margin-bottom: 7%;
        }
        /* CSS For Mobile Character Forum */
        #subforumLogo {
            width: 26%;
            margin: 3%;
        }
        #sectionSubhead {
            /* font-size: 25px; */
            font-size: 1.8em;
        }
        #forumsectionHeader {
            /* margin-top: 3%; */
        }
        #subforumSelect {
            font-size: 18px;
            /* CHANGE THIS TO EM LATER ON */
        }
        #subforumCreateButton {
            font-size: 20px;
            width: 45%;
            background-color: rgb(73, 165, 201);
            color: white;
        }
        #subforumPostHead {
            /* margin-bottom: -7px; */
            /* Change from pixels to another measurement, negative margin here isn't bad practice */
        }
        #subpostUserLogo {
            width: 18%;
            /* Margin isn't removed for this whole logo as the margin that's removed will be the entire section itself */
        }
        #subforumPostListing {
            /* VERY IMPORTANT STYLING, ESPECIALLY WIDTH */
            width: 350px;
            margin-top: 5%;
            position: relative;
            right: -35px;
        }
        /* Testing */
        #subpostCreator {
            display: inline;
            text-align: right;
        }
        #commentIcon {
            position: relative;
            bottom: -5px;
        }
        #subpostTimestamp {
            display: inline;
            text-align: right;
        }
        #subforumPostContent {
            /* display: flex;
            flex-direction: row; */
            display: inline-block;
            /*Margin adjusted from 10%*/
            margin-left: 6%;
            position: relative;
            top: -11px;
        }
        #subpostCommentIcon {
            width: 4%;
            height: 4%;
            right: 7%;
            position: absolute;
            /* Prevents content from being pushed */
        }
        #subforumBanner {
            max-width: 100%;
            max-height: 100%;
        }
        .subforumPostWrapper {
            border-bottom: 1px solid rgba(0, 0, 0, 0.3);
            width: fit-content;
            height: fit-content;
            display: inline-block;
            margin-right: 0;
        }
        /* The issue has to do with the section's right margin */
        /* Mobile forum tags that are used for buttons */
        .subforumPostTag {
            background-color:rgb(73, 165, 201);
            color: white;
        }
        /* Registration page css!! */
        .infoForm {
            height: 73vh;
            /* vh = viewport height */
        }
        .infoText {
            font-size: 27px;
            height: 60px;
        }
        .infoSubmit {
            font-size: 30px;
        }
        /* CSS Animation Settings */
        #navMenuX {
            font-size: 1.16em;
        }
    }

